--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ffmpeg"]
 	path = ffmpeg
 	url = https://github.com/hrydgard/ppsspp-ffmpeg.git
+[submodule "dx9sdk"]
+	path = dx9sdk
+	url = git@github.com:hrydgard/minidx9.git
