--- a/Windows/PPSSPP.vcxproj.filters
+++ b/Windows/PPSSPP.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="GEDebugger\GEDebugger.cpp">
       <Filter>Windows\GE Debugger</Filter>
     </ClCompile>
+    <ClCompile Include="GEDebugger\SimpleGLWindow.cpp">
+      <Filter>Windows\GE Debugger</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Debugger\CtrlDisAsmView.h">
@@ -204,6 +207,9 @@
       <Filter>Windows\Debugger</Filter>
     </ClInclude>
     <ClInclude Include="GEDebugger\GEDebugger.h">
+      <Filter>Windows\GE Debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="GEDebugger\SimpleGLWindow.h">
       <Filter>Windows\GE Debugger</Filter>
     </ClInclude>
   </ItemGroup>
