--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -171,6 +171,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Break",IDC_GEDBG_BREAK,0,0,48,14
     PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,52,0,48,14
+    CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,119,40,256,136	
 END
 
 #include "aboutbox.rc"
