--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -171,7 +171,8 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Break",IDC_GEDBG_BREAK,0,0,48,14
     PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,52,0,48,14
-    CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,119,40,256,136	
+    CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,140,10,256,136	
+    CONTROL         "",IDC_GEDBG_CURRENTDISPLAYLIST,"CtrlDisplayListView",WS_BORDER | WS_VISIBLE,10,185,456,200	
 END
 
 #include "aboutbox.rc"
