--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -171,7 +171,7 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Break",IDC_GEDBG_BREAK,0,0,48,14
     PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,52,0,48,14
-    CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS | TCS_FOCUSONBUTTONDOWN ,10,16,480,180
+    CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS ,10,16,480,180
     CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,140,210,256,136	
 END
 
