--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -171,8 +171,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Break",IDC_GEDBG_BREAK,0,0,48,14
     PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,52,0,48,14
-    CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,140,10,256,136	
-    CONTROL         "",IDC_GEDBG_CURRENTDISPLAYLIST,"CtrlDisplayListView",WS_BORDER | WS_VISIBLE,10,185,456,200	
+    CONTROL         "",IDC_GEDBG_TEX,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,10,20,128,128
+    CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,148,20,256,136
+    CONTROL         "",IDC_GEDBG_CURRENTDISPLAYLIST,"CtrlDisplayListView",WS_BORDER | WS_VISIBLE,10,195,456,200
 END
 
 #include "aboutbox.rc"
