Display list tab

--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -177,6 +177,17 @@ BEGIN
     CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS ,10,216,480,180
 END
 
+
+IDD_TABDISPLAYLISTS DIALOGEX 0, 0, 316, 183
+STYLE DS_SETFONT | DS_FIXEDSYS
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_GEDBG_LISTS_ALLLISTS,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER | WS_TABSTOP,7,7,217,86
+    CONTROL         "",IDC_GEDBG_LISTS_STACK,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER | WS_TABSTOP,7,95,302,81
+    CONTROL         "",IDC_GEDBG_LISTS_SELECTEDLIST,"CtrlDisplayListView",WS_BORDER,225,7,84,89
+END
+
 #include "aboutbox.rc"
 
 IDD_MEMORY DIALOGEX 0, 0, 566, 287
