--- a/Windows/PPSSPP.vcxproj
+++ b/Windows/PPSSPP.vcxproj
@@ -284,6 +284,7 @@
     <ClCompile Include="DinputDevice.cpp" />
     <ClCompile Include="EmuThread.cpp" />
     <ClCompile Include="GEDebugger\SimpleGLWindow.cpp" />
+    <ClCompile Include="GEDebugger\TabDisplayLists.cpp" />
     <ClCompile Include="InputDevice.cpp" />
     <ClCompile Include="KeyboardDevice.cpp" />
     <ClCompile Include="W32Util\DialogManager.cpp" />
@@ -329,6 +330,7 @@
     <ClInclude Include="DinputDevice.h" />
     <ClInclude Include="EmuThread.h" />
     <ClInclude Include="GEDebugger\SimpleGLWindow.h" />
+    <ClInclude Include="GEDebugger\TabDisplayLists.h" />
     <ClInclude Include="InputDevice.h" />
     <ClInclude Include="KeyboardDevice.h" />
     <ClInclude Include="W32Util\DialogManager.h" />
