--- a/Windows/PPSSPP.vcxproj.filters
+++ b/Windows/PPSSPP.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="W32Util\TabControl.cpp">
       <Filter>Windows\W32Util</Filter>
     </ClCompile>
+    <ClCompile Include="GEDebugger\TabDisplayLists.cpp">
+      <Filter>Windows\GE Debugger</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Debugger\CtrlDisAsmView.h">
@@ -223,6 +226,9 @@
     </ClInclude>
     <ClInclude Include="W32Util\TabControl.h">
       <Filter>Windows\W32Util</Filter>
+    </ClInclude>
+    <ClInclude Include="GEDebugger\TabDisplayLists.h">
+      <Filter>Windows\GE Debugger</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
