Update CMakeLists.txt for x86 ffmpeg.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1162,7 +1162,11 @@ if(USE_FFMPEG AND NOT DEFINED FFMPEG_BUILDDIR)
 	elseif(MACOSX)
 		set(PLATFORM_ARCH "macosx/x86_64")
 	elseif(LINUX)
-		set(PLATFORM_ARCH "linux/x86_64")
+		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+			set(PLATFORM_ARCH "linux/x86_64")
+		else()
+			set(PLATFORM_ARCH "linux/x86")
+		endif()
 	endif()
 	# Using static libraries
 	if (DEFINED PLATFORM_ARCH)
