Add a tab for flags to the ge debugger.

--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -182,8 +182,17 @@ BEGIN
 END
 
 
+IDD_GEDBG_TAB_VALUES DIALOGEX 0, 0, 316, 183
+STYLE DS_SETFONT | WS_CHILD | DS_CONTROL
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_GEDBG_VALUES,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER | WS_TABSTOP,7,7,217,86
+END
+
+
 IDD_TABDISPLAYLISTS DIALOGEX 0, 0, 316, 183
-STYLE DS_SETFONT | DS_FIXEDSYS
+STYLE DS_SETFONT | WS_CHILD | DS_CONTROL
 CAPTION "Dialog"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
