--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -103,6 +103,7 @@ BEGIN
     VK_F10,         ID_DEBUG_STEPOVER,                 VIRTKEY, NOINVERT
     VK_F11,         ID_DEBUG_STEPINTO,                 VIRTKEY, NOINVERT
     VK_F11,         ID_DEBUG_STEPOUT,                  VIRTKEY, SHIFT, NOINVERT
+    "X",            ID_DEBUG_HIDEBOTTOMTABS,           VIRTKEY, CONTROL, NOINVERT
 END
 
 
@@ -157,10 +158,11 @@ BEGIN
     CONTROL         "",IDC_LEFTTABS,"SysTabControl32",TCS_BUTTONS,1,63,78,15
     LISTBOX         IDC_FUNCTIONLIST,1,83,103,255,LBS_SORT | LBS_NOINTEGRALHEIGHT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "VFPU",IDC_SHOWVFPU,83,63,24,12
-    CONTROL         "",IDC_BREAKPOINTLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93
-    CONTROL         "Custom2",IDC_DEBUGMEMVIEW,"CtrlMemView",WS_BORDER,1,338,513,93
+    CONTROL         "",IDC_BREAKPOINTLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT,1,338,513,93
+    CONTROL         "Custom2",IDC_DEBUGMEMVIEW,"CtrlMemView",0,1,338,513,93
     CONTROL         "",IDC_THREADLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93
-    CONTROL         "",IDC_STACKFRAMES,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93
+    CONTROL         "",IDC_STACKFRAMES,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93 	
+    CONTROL         "",IDC_DEBUG_BOTTOMTABS,"SysTabControl32",TCS_TABS | TCS_FOCUSNEVER,1,338,513,93
 END
 
 IDD_GEDEBUGGER DIALOGEX 0, 0, 500, 400
