-use tab control class for left tabs -add a way to hide tab titles -accelerator for GEDebugger

--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -67,8 +67,9 @@ BEGIN
     "O",            ID_FILE_LOAD,           VIRTKEY, CONTROL, NOINVERT
     "W",            ID_EMULATION_STOP,      VIRTKEY, CONTROL, NOINVERT
     "B",            ID_EMULATION_RESET,     VIRTKEY, CONTROL, NOINVERT
-    "T",            ID_EMULATION_CHEATS, VIRTKEY, CONTROL, NOINVERT
+    "T",            ID_EMULATION_CHEATS,    VIRTKEY, CONTROL, NOINVERT
     "D",            ID_DEBUG_DISASSEMBLY,   VIRTKEY, CONTROL, NOINVERT
+    "G",            ID_DEBUG_GEDEBUGGER,    VIRTKEY, CONTROL, NOINVERT
     "L",            ID_DEBUG_LOG,           VIRTKEY, CONTROL, NOINVERT
     "E",            ID_DEBUG_MEMORYCHECKS,  VIRTKEY, CONTROL, NOINVERT
     "F",            ID_DEBUG_MEMORYSEARCH,  VIRTKEY, CONTROL, NOINVERT
@@ -104,6 +105,7 @@ BEGIN
     VK_F11,         ID_DEBUG_STEPINTO,                 VIRTKEY, NOINVERT
     VK_F11,         ID_DEBUG_STEPOUT,                  VIRTKEY, SHIFT, NOINVERT
     "X",            ID_DEBUG_HIDEBOTTOMTABS,           VIRTKEY, CONTROL, NOINVERT
+    "Y",            ID_DEBUG_TOGGLEBOTTOMTABTITLES,    VIRTKEY, CONTROL, NOINVERT
 END
 
 
@@ -155,13 +157,13 @@ BEGIN
     CONTROL         "Custom1",IDC_DISASMVIEW,"CtrlDisAsmView",WS_BORDER | WS_TABSTOP,111,16,397,304
     GROUPBOX        "Go to",IDC_STATIC,5,12,102,47
     CONTROL         "Custom1",IDC_REGLIST,"CtrlRegisterList",WS_BORDER | WS_TABSTOP,1,81,102,255
-    CONTROL         "",IDC_LEFTTABS,"SysTabControl32",TCS_BUTTONS,1,63,78,15
+    CONTROL         "",IDC_LEFTTABS,"SysTabControl32",TCS_BUTTONS | TCS_FOCUSNEVER,1,63,78,15
     LISTBOX         IDC_FUNCTIONLIST,1,83,103,255,LBS_SORT | LBS_NOINTEGRALHEIGHT | NOT WS_VISIBLE | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "VFPU",IDC_SHOWVFPU,83,63,24,12
     CONTROL         "",IDC_BREAKPOINTLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT,1,338,513,93
     CONTROL         "Custom2",IDC_DEBUGMEMVIEW,"CtrlMemView",0,1,338,513,93
-    CONTROL         "",IDC_THREADLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93
-    CONTROL         "",IDC_STACKFRAMES,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT | WS_BORDER,1,338,513,93 	
+    CONTROL         "",IDC_THREADLIST,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT,1,338,513,93
+    CONTROL         "",IDC_STACKFRAMES,"SysListView32",LVS_ALIGNLEFT | LVS_SHOWSELALWAYS | LVS_REPORT,1,338,513,93 	
     CONTROL         "",IDC_DEBUG_BOTTOMTABS,"SysTabControl32",TCS_TABS | TCS_FOCUSNEVER,1,338,513,93
 END
 
@@ -176,7 +178,7 @@ BEGIN
     PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,104,0,48,14
     CONTROL         "",IDC_GEDBG_TEX,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,10,20,128,128
     CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,148,20,256,136
-    CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS ,10,216,480,180
+    CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS | TCS_FOCUSNEVER ,10,216,480,180
 END
 
 
