--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -505,7 +505,7 @@ BEGIN
         MENUITEM "Copy Instruction (Disasm)",  ID_DISASM_COPYINSTRUCTIONDISASM
         MENUITEM "Disassemble to File",        ID_DISASM_DISASSEMBLETOFILE
         MENUITEM SEPARATOR
-        MENUITEM "Assemble Ppcode",            ID_DISASM_ASSEMBLE
+        MENUITEM "Assemble Opcode",            ID_DISASM_ASSEMBLE
         MENUITEM SEPARATOR
         MENUITEM "Run to Cursor",              ID_DISASM_RUNTOHERE
         MENUITEM "Jump to Cursor",             ID_DISASM_SETPCTOHERE
@@ -558,9 +558,11 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Run to Cursor",              ID_DISASM_RUNTOHERE
         MENUITEM "Jump to Cursor",             ID_DISASM_SETPCTOHERE
-        MENUITEM "Set Stall"                   IDC_DEBUG_LIST_SETSTALL
+        MENUITEM "Set Stall"                   ID_GEDBG_SETSTALLADDR
         MENUITEM "Toggle Breakpoint",          ID_DISASM_TOGGLEBREAKPOINT
         MENUITEM SEPARATOR
+        MENUITEM "Go to Displaylist PC",       ID_GEDBG_GOTOPC
+        MENUITEM "Go to Address...",           ID_GEDBG_GOTOADDR
         MENUITEM "Go to in Memory View",       ID_DISASM_GOTOINMEMORYVIEW
 	END
 END
