--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -175,7 +175,9 @@ FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Step Draw",IDC_GEDBG_STEPDRAW,0,0,48,14
     PUSHBUTTON      "Step Into",IDC_GEDBG_STEP,52,0,48,14
-    PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,104,0,48,14
+    PUSHBUTTON      "Step Tex",IDC_GEDBG_STEPTEX,104,0,48,14
+    PUSHBUTTON      "Step Frame",IDC_GEDBG_STEPFRAME,156,0,48,14
+    PUSHBUTTON      "Resume",IDC_GEDBG_RESUME,208,0,48,14
     CONTROL         "",IDC_GEDBG_TEX,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,10,20,128,128
     CONTROL         "",IDC_GEDBG_FRAME,"SimpleGLWindow",WS_CHILD | WS_VISIBLE,148,20,256,136
     CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS | TCS_FOCUSNEVER,10,216,480,180
