Add a button to break on a particular texture.

--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -183,6 +183,7 @@ BEGIN
     CONTROL         "",IDC_GEDBG_MAINTAB,"SysTabControl32",TCS_TABS | TCS_FOCUSNEVER,10,216,480,180
     EDITTEXT        IDC_GEDBG_FRAMEBUFADDR,148,192,128,12,ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_GEDBG_TEXADDR,10,152,128,12,ES_READONLY | NOT WS_BORDER
+    PUSHBUTTON      "Break on Texture...",IDC_GEDBG_BREAKTEX,24,172,100,14
     CONTROL         "",IDC_GEDBG_FBTABS,"SysTabControl32",TCS_BUTTONS | TCS_FOCUSNEVER,384,192,110,12
 END
 
