allow loading and unloading of onScreen control coordinates. Also, use sane (bottom left origin)coordinate system for all onScreen elements
can now reposition on screen controls

removed unnessecary files

fixed indenting issues

renamed RepositionOnScreenControlScree to TouchControlLayoutScreen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1151,6 +1151,7 @@ set(NativeAppSource
 	UI/MiscScreens.cpp
 	UI/GameScreen.cpp
 	UI/GameSettingsScreen.cpp
+	UI/TouchControlLayoutScreen.cpp
 	UI/GamepadEmu.cpp
 	UI/UIShader.cpp
 	UI/OnScreenDisplay.cpp
