--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -411,6 +411,7 @@ BEGIN
     POPUP "Options"
     BEGIN
         MENUITEM "Keep PPSSPP On Top",                      ID_OPTIONS_TOPMOST
+		MENUITEM "Pause When Not Focused",					ID_OPTIONS_PAUSE_FOCUS
         MENUITEM "More Settings...",                        ID_OPTIONS_MORE_SETTINGS
         MENUITEM "Control Mapping...",                      ID_OPTIONS_CONTROLS
         MENUITEM SEPARATOR
