Two more post processing shaders just for fun. Vignette looks pretty nice.

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -13,3 +13,13 @@ Name=Grayscale
 Author=Henrik
 Fragment=grayscale.fsh
 Vertex=fxaa.vsh
+[Vignette]
+Name=Vignette
+Author=Henrik
+Fragment=vignette.fsh
+Vertex=fxaa.vsh
+[InverseColors]
+Name=Inverse Colors
+Author=Henrik
+Fragment=inversecolors.fsh
+Vertex=fxaa.vsh
