Add two more shaders, Scanlines and Cartoon

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -23,3 +23,11 @@ Name=Inverse Colors
 Author=Henrik
 Fragment=inversecolors.fsh
 Vertex=fxaa.vsh
+[Scanlines]
+Name=Scanlines
+Fragment=Scanlines.fsh
+Vertex=fxaa.vsh
+[Cartoon]
+Name=Advance Cartoon shader
+Fragment=Cartoon shader.fsh
+Vertex=Cartoon shader.vsh
