Move GPU debug step/pause/messages out of Windows/.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1006,6 +1006,8 @@ add_library(GPU OBJECT
 	GPU/Common/SplineCommon.h
 	GPU/Debugger/Breakpoints.cpp
 	GPU/Debugger/Breakpoints.h
+	GPU/Debugger/Stepping.cpp
+	GPU/Debugger/Stepping.h
 	GPU/GLES/GLES_GPU.cpp
 	GPU/GLES/GLES_GPU.h
 	GPU/GLES/FragmentShaderGenerator.cpp
