Minor shader cleanup, fix a build error (see #4160)

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -5,7 +5,7 @@ Author=nVidia
 Fragment=fxaa.fsh
 Vertex=fxaa.vsh
 [Natural]
-Name=Natural Look
+Name=Natural Colors
 Fragment=natural.fsh
 Vertex=natural.vsh
 [Grayscale]
@@ -25,9 +25,9 @@ Fragment=inversecolors.fsh
 Vertex=fxaa.vsh
 [Scanlines]
 Name=Scanlines
-Fragment=Scanlines.fsh
+Fragment=scanlines.fsh
 Vertex=fxaa.vsh
 [Cartoon]
-Name=Advance Cartoon shader
-Fragment=Cartoon shader.fsh
-Vertex=Cartoon shader.vsh
+Name=Cartoon
+Fragment=cartoon.fsh
+Vertex=cartoon.vsh
