Use ffmpeg for Atrac3+ decoding during video playback as well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -911,6 +911,8 @@ add_library(${CoreLibName} ${CoreLinkType}
 	Core/HLE/sceNp.h
 	Core/HLE/scePauth.cpp
 	Core/HLE/scePauth.h
+	Core/HW/SimpleAT3Dec.cpp
+	Core/HW/SimpleAT3Dec.h
 	Core/HW/atrac3plus.cpp
 	Core/HW/atrac3plus.h
 	Core/HW/AsyncIOManager.cpp
