--- a/UI/UI.vcxproj.filters
+++ b/UI/UI.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="CwCheatScreen.cpp">
       <Filter>Screens</Filter>
     </ClCompile>
+    <ClCompile Include="TouchControlLayoutScreen.cpp">
+      <Filter>Screens</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameInfoCache.h" />
@@ -60,6 +63,9 @@
       <Filter>Screens</Filter>
     </ClInclude>
     <ClInclude Include="CwCheatScreen.h">
+      <Filter>Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="TouchControlLayoutScreen.h">
       <Filter>Screens</Filter>
     </ClInclude>
   </ItemGroup>
