Add TouchControlVisibility.cpp/h to Visual Studio project "UI".

--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="NativeApp.cpp" />
     <ClCompile Include="OnScreenDisplay.cpp" />
     <ClCompile Include="TouchControlLayoutScreen.cpp" />
+    <ClCompile Include="TouchControlVisibilityScreen.cpp" />
     <ClCompile Include="UIShader.cpp" />
     <ClCompile Include="ui_atlas.cpp" />
   </ItemGroup>
@@ -48,6 +49,7 @@
     <ClInclude Include="MiscScreens.h" />
     <ClInclude Include="OnScreenDisplay.h" />
     <ClInclude Include="TouchControlLayoutScreen.h" />
+    <ClInclude Include="TouchControlVisibilityScreen.h" />
     <ClInclude Include="UIShader.h" />
     <ClInclude Include="ui_atlas.h" />
   </ItemGroup>
