Remove rebase junk, update CMakeLists.txt, update Android.mk.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1137,6 +1137,7 @@ set(NativeAppSource
 	UI/GameScreen.cpp
 	UI/GameSettingsScreen.cpp
 	UI/TouchControlLayoutScreen.cpp
+	UI/TouchControlVisibilityScreen.cpp
 	UI/GamepadEmu.cpp
 	UI/UIShader.cpp
 	UI/OnScreenDisplay.cpp
