Buildfix Symbian and Blackberry from the ffmpeg merge. Fix a header issue on Blackberry. Fix a UINT64_C define issue. FFMPEG is no longer 'beta'.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 
 if(BLACKBERRY)
 	set(CMAKE_SYSTEM_NAME "QNX")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS")
 endif()
 
 if (IOS OR BLACKBERRY)
@@ -36,7 +37,7 @@ endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	set(LINUX ON)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -D__STDC_CONSTANT_MACROS")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_CONSTANT_MACROS")
 	if (NOT USING_GLES2)
 		set(USE_FFMPEG ON)
 	endif()
@@ -63,7 +64,7 @@ option(IOS "Set to ON if targeting an iOS device" ${IOS})
 option(USING_GLES2 "Set to ON if target device uses OpenGL ES 2.0" ${USING_GLES2})
 option(USING_QT_UI "Set to ON if you wish to use the Qt frontend wrapper" ${USING_QT_UI})
 option(HEADLESS "Set to OFF to not generate the PPSSPPHeadless target" ${HEADLESS})
-option(USE_FFMPEG "Build with FFMPEG support (beta)" ${USE_FFMPEG})
+option(USE_FFMPEG "Build with FFMPEG support" ${USE_FFMPEG})
 
 if(ANDROID)
 	if(NOT ANDROID_ABI)
