Add proper support for upscaling shaders, add Spline36 upscaling
Spline36 isn't as amazing as I had hoped heh. And it will need work to
work in GLSL ES. Anyway...

This also renames u_texcoordDelta to u_texelDelta to fit in with u_pixelDelta.

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -39,3 +39,8 @@ Vertex=4xhqglsl.vsh
 Name=AA-Color
 Fragment=aacolor.fsh
 Vertex=aacolor.vsh
+[UpscaleSpline36]
+Name=Spline36 Upscaler
+Fragment=upscale_spline36.fsh
+Vertex=upscale_spline36.vsh
+OutputResolution=True
