Add ugly hack setting for PowerVR to disable alpha test
Causes glitches but the speedup is truly massive in some games so I relent :/

Please do not report graphics bugs when this is enabled...

Future: Maybe remove this setting except on PowerVR?

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -27,6 +27,7 @@ Vertex=fxaa.vsh
 Name=Scanlines
 Fragment=scanlines.fsh
 Vertex=fxaa.vsh
+OutputResolution=True
 [Cartoon]
 Name=Cartoon
 Fragment=cartoon.fsh
