Add a Better name for scanlines shader

--- a/assets/shaders/defaultshaders.ini
+++ b/assets/shaders/defaultshaders.ini
@@ -24,7 +24,7 @@ Author=Henrik
 Fragment=inversecolors.fsh
 Vertex=fxaa.vsh
 [Scanlines]
-Name=Scanlines
+Name=Scanlines (CRT)
 Fragment=scanlines.fsh
 Vertex=fxaa.vsh
 OutputResolution=True
