Clean up GLES3init. Pass Blackberry version through to defines. Update QCOM binning comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ endif()
 include_directories("${CMAKE_SOURCE_DIR}")
 
 if(BLACKBERRY)
-	add_definitions(-DBLACKBERRY)
+	add_definitions(-DBLACKBERRY=${BLACKBERRY})
 endif()
 
 if(ANDROID)
