Install flash0 and lang into the build directory on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1282,6 +1282,7 @@ endif()
 
 # installs
 file(INSTALL ${NativeAssets} DESTINATION assets)
+file(INSTALL flash0 lang DESTINATION .)
 
 # Fix CMake some Xcode settings.
 if(APPLE)
