fix Vietnamese locale

--- a/assets/langregion.ini
+++ b/assets/langregion.ini
@@ -26,7 +26,7 @@ ro_RO = "Român"
 sv_SE = "Svenska"
 tr_TR = "Türk"
 uk_UA = "Українська"
-vn_VN = "Tiếng Việt"
+vi_VN = "Tiếng Việt"
 cz_CZ = "Česky"
 tg_PH = "Tagalog"
 dr_ID = "Duri"
